--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "ictsmartpro-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "nest build || npm install && nest build",
+    "start": "node dist/main"
+  },
   "dependencies": {
     "framer-motion": "^11.3.0",
     "next": "14.2.15",
@@ -6,4 +14,3 @@
     "react-dom": "^18.2.0"
   }
 }
-
