--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "ictsmartpro-frontend",
+  "name": "ictsmartpro-backend",
   "version": "1.0.0",
-  "private": true,
+  "description": "Backend API for ICTSmartPro",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "nest build || npm install && nest build",
-    "start": "node dist/main"
+    "build": "nest build",
+    "start": "node dist/main",
+    "start:prod": "node dist/main"
   },
   "dependencies": {
-    "framer-motion": "^11.3.0",
-    "next": "14.2.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.7",
+    "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
