--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Backend service for ICTSmartPro",
   "main": "index.js",
   "scripts": {
-    "build": "echo '✅ Build step skipped (no compilation needed)'",
-    "start:prod": "node -e \"require('http').createServer((req, res) => { res.writeHead(200, { 'Content-Type': 'text/plain' }); res.end('ICTSmartPro Backend ✅ Running on Railway!'); }).listen(process.env.PORT || 3000, () => console.log('🚀 Listening on port ' + (process.env.PORT || 3000)));\""
+    "start": "node index.js"
   },
   "keywords": ["railway", "node", "backend"],
   "author": "Hüseyin YILMAZ",
