--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ictsmartpro-backend",
+  "name": "ictsmartpro-backend-live",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
