--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-fastapi
-uvicorn
-ccxt
-pandas
-numpy
-python-dotenv
-  
-jinja2
-python-multipart
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+ccxt>=4.3.0
+pandas>=2.2.0
+numpy>=1.26.0
+python-dotenv>=1.0.0
+jinja2>=3.1.0
+python-multipart>=0.0.9
