--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,8 @@
-# Sadece Python kullan, Java ve Node.js’u tamamen devre dışı bırak
+# Sadece Python kullan, default venv'li install'ı kullan
 providers = ["python"]
 
 [phases.setup]
   nixPkgs = ["python312", "python312Packages.pip", "gcc"]
-
-[phases.install]
-  cmds = ["pip install --no-cache-dir -r requirements.txt"]
-
-[phases.build]
-  cmds = []
 
 [start]
   cmd = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
