--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,2 @@
-fastapi>=0.115.0
-uvicorn[standard]>=0.32.0
-ccxt>=4.3.0
-pandas>=2.2.0
-numpy>=1.26.0
-python-dotenv>=1.0.0
-jinja2>=3.1.0
-python-multipart>=0.0.9
+fastapi
+uvicorn[standard]
