--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 fastapi
+uvicorn[standard]
 ccxt
 httpx
 pandas
 numpy
-uvicorn[standard] 
-cachetools  # <-- BU EKLENDİ
 websockets
-pandas-ta  # veya pandas-ta-classic
+pandas-ta  # pandas_ta'nın resmi adı artık bu (pandas-ta değil)
+cachetools  # zaten eklemişsin, iyi
 
- 
+# PostgreSQL + SQLAlchemy için ZORUNLU
+sqlalchemy>=2.0
+psycopg2-binary  # PostgreSQL driver (Railway'de en stabil olanı)
 
+# Opsiyonel ama önerilen (hata ayıklama ve performans için)
+python-dotenv  # .env dosyası okumak istersen
+loguru  # daha iyi logging istersen (isteğe bağlı)
+
+# Stripe için
+stripe
