--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-fastapi
-uvicorn[standard]
-ccxt
-httpx
-websockets
-pandas
-numpy
-pandas-ta
-cachetools
-sqlalchemy
-psycopg2-binary
-stripe
-python-multipart   # <--- BU EKLENDİ, ZORUNLU!
-hypercorn
-openai>=1.0.0
-python-multipart
-python-binance
-matplotlib
-pillow
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
+httpx>=0.27.0
+websockets>=12.0
+ccxt>=4.3.0
+pandas>=2.2.0
+numpy>=1.26.0
+pandas-ta>=0.3.14b0
+cachetools>=5.3.0
+SQLAlchemy>=2.0.0
+psycopg2-binary>=2.9.9
+stripe>=8.0.0
+python-multipart>=0.0.9          # FastAPI'de file upload (UploadFile) için ZORUNLU!
+python-binance>=1.0.19
+matplotlib>=3.8.0
+Pillow>=10.0.0                   # PIL'in resmi adı artık Pillow (büyük P ile)
+openai>=1.50.0                   # GPT-4o desteği için en güncel sürüm önerilir
+hypercorn>=0.16.0                # Opsiyonel: Daha performanslı ASGI server (uvicorn yerine kullanılabilir)
 
-
-
+# Opsiyonel ama önerilen ekler (geliştirme ve debug için)
+python-dotenv>=1.0.0             # .env dosyası yönetimi (API key'ler için)
+loguru>=0.7.0                    # Daha güzel logging (isteğe bağlı, logging yerine kullanabilirsin)
