--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,12 @@ uvicorn[standard]>=0.29.0
 pandas>=2.2.0
 numpy>=1.26.0
 ccxt>=4.3.0
-pycoingecko>=3.1.0                  # CoinGecko fallback için ZORUNLU!
-openai>=1.50.0                      # GPT-4o desteği için güncel sürüm
-python-multipart>=0.0.9             # UploadFile (dosya yükleme) için ZORUNLU!
-jinja2>=3.1.0                       # Jinja2Templates için
-aiohttp>=3.9.0                      # Opsiyonel ama ccxt ve diğer async isteklerde faydalı
-httpx>=0.27.0                       # Bazı async işlemlerde kullanılabilir
-websockets>=12.0                    # WebSocket desteği için
-python-dotenv>=1.0.0                # .env dosyası yönetimi (API key'ler için önerilir)
-loguru>=0.7.0                       # Daha güzel ve renkli loglar (isteğe bağlı ama çok faydalı)
-pycoingecko
+pycoingecko>=3.1.0                  # CoinGecko fallback için - HATA BURADAN ÇIKIYORDU, ŞİMDİ KESİN YÜKLENECEK!
+openai>=1.50.0
+python-multipart>=0.0.9             # UploadFile için zorunlu
+jinja2>=3.1.0
+aiohttp>=3.9.0
+httpx>=0.27.0
+websockets>=12.0
+python-dotenv>=1.0.0                # .env desteği (API key'ler için çok kullanışlı)
+loguru>=0.7.0                       # Daha güzel loglar (isteğe bağlı ama öneririm)
