--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ httpx>=0.27.0
 websockets>=12.0
 python-dotenv>=1.0.0                # .env desteği (API key'ler için çok kullanışlı)
 loguru>=0.7.0                       # Daha güzel loglar (isteğe bağlı ama öneririm)
+hypercorn>=0.16.0
