--- a/requirements.txt
+++ b/requirements.txt
@@ -50,4 +50,5 @@ ruff>=0.6.0                         # linter & formatter (black alternatifi)
 flask>=3.0.0
 flask-cors>=5.0.0
 flask-limiter>=3.8.0
+torch>=2.4.0 
 
