--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pycoingecko>=3.2.0
 httpx>=0.27.2
 aiohttp>=3.10.0
 websockets>=13.0
-python-multipart>=0..12
+python-multipart>=0.12
 jinja2>=3.1.4
 python-dotenv>=1.0.1
 pydantic>=2.9.0
@@ -28,5 +28,6 @@ torch>=2.4.0
 transformers>=5.0.0
 Pillow>=10.0.0
  
+
 
 
