--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# requirements.txt'i sıfırla
- 
+# requirements.txt'i düzenle
+cat > requirements.txt << 'EOF'
 fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
 hypercorn>=0.17.0
@@ -10,7 +10,7 @@ pycoingecko>=3.2.0
 httpx>=0.27.2
 aiohttp>=3.10.0
 websockets>=13.0
-python-multipart>=0.12
+python-multipart>=0.0.22
 jinja2>=3.1.4
 python-dotenv>=1.0.1
 pydantic>=2.9.0
@@ -27,7 +27,9 @@ flask-limiter>=3.8.0
 torch>=2.4.0
 transformers>=5.0.0
 Pillow>=10.0.0
- 
+EOF
 
-
-
+# Git'e ekle ve push et
+git add requirements.txt
+git commit -m "fix: correct python-multipart version to 0.0.22"
+git push origin main
