--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-# requirements.txt'i düzenle
- 
 fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
 hypercorn>=0.17.0
 pandas>=2.2.3
-numpy>=2.0.0
+numpy>=1.26.4              # 2.0+ bazı paketlerde hâlâ sorunlu olabilir
 ccxt>=4.4.0
 pycoingecko>=3.2.0
 httpx>=0.27.2
 aiohttp>=3.10.0
 websockets>=13.0
-python-multipart>=0.0.22
+python-multipart>=0.12
 jinja2>=3.1.4
 python-dotenv>=1.0.1
 pydantic>=2.9.0
@@ -24,13 +22,6 @@ ruff>=0.6.0
 flask>=3.0.0
 flask-cors>=5.0.0
 flask-limiter>=3.8.0
-torch>=2.4.0
-transformers>=5.0.0
+torch>=2.4.0               # önce bunu ayrı kur, cuda varsa torch torchvision torchaudio cuda versiyonuyla
+transformers>=4.45.0       # ← burası en kritik değişiklik
 Pillow>=10.0.0
- 
-
-# Git'e ekle ve push et
-git add requirements.txt
-git commit -m "fix: correct python-multipart version to 0.0.22"
-git push origin main
-
