--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pycoingecko>=3.2.0
 httpx>=0.27.2
 aiohttp>=3.10.0
 websockets>=13.0
-python-multipart>=0.12
+python-multipart
 jinja2>=3.1.4
 python-dotenv>=1.0.1
 pydantic>=2.9.0
@@ -25,3 +25,4 @@ flask-limiter>=3.8.0
 torch>=2.4.0               # önce bunu ayrı kur, cuda varsa torch torchvision torchaudio cuda versiyonuyla
 transformers>=4.45.0       # ← burası en kritik değişiklik
 Pillow>=10.0.0
+
