--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,67 @@
+# ==============================================
+# FastAPI & Sunucu (Core)
+# ==============================================
 fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
 hypercorn>=0.17.0
+
+# ==============================================
+# Veri & Analiz
+# ==============================================
 pandas>=2.2.3
-numpy>=1.26.4              # 2.0+ bazı paketlerde hâlâ sorunlu olabilir
+numpy>=2.0.0
 ccxt>=4.4.0
 pycoingecko>=3.2.0
+
+# ==============================================
+# API & HTTP İstemcileri
+# ==============================================
 httpx>=0.27.2
 aiohttp>=3.10.0
 websockets>=13.0
-python-multipart
+duckduckgo_search>=5.0.0          # 🔴 EKLENDİ: DDG arama entegrasyonu
+
+# ==============================================
+# Dosya & Form İşleme
+# ==============================================
+python-multipart>=0.0.22          # ✅ DÜZELTİLDİ: 0.0.22 (0.12 değil)
 jinja2>=3.1.4
+
+# ==============================================
+# Yardımcı & Güvenlik
+# ==============================================
 python-dotenv>=1.0.1
 pydantic>=2.9.0
 pydantic-settings>=2.5.0
+
+# ==============================================
+# Loglama & Debug
+# ==============================================
 loguru>=0.7.2
 rich>=13.7.0
+
+# ==============================================
+# Test & Development
+# ==============================================
 pytest>=8.3.0
 pytest-asyncio>=0.24.0
 pytest-cov>=5.0.0
 ruff>=0.6.0
+
+# ==============================================
+# Web Framework & CORS
+# ==============================================
 flask>=3.0.0
 flask-cors>=5.0.0
 flask-limiter>=3.8.0
-torch>=2.4.0               # önce bunu ayrı kur, cuda varsa torch torchvision torchaudio cuda versiyonuyla
-transformers>=4.45.0       # ← burası en kritik değişiklik
-Pillow>=10.0.0
 
+# ==============================================
+# Machine Learning & AI
+# ==============================================
+torch>=2.4.0
+transformers>=5.0.0
+
+# ==============================================
+# Image Processing
+# ==============================================
+Pillow>=10.0.0
