--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,69 @@
+# Production-Ready AI Chatbot - requirements.txt (hash'siz, Railway uyumlu)
+
 # ==============================================
 # FastAPI & Sunucu (Core)
 # ==============================================
-fastapi>=0.115.0
-uvicorn[standard]>=0.30.0
-hypercorn>=0.17.0
+fastapi==0.115.2
+uvicorn[standard]==0.30.6
+hypercorn==0.17.3
 
 # ==============================================
 # Veri & Analiz
 # ==============================================
-pandas>=2.2.3
-numpy>=2.0.0
-ccxt>=4.4.0
-pycoingecko>=3.2.0
+pandas==2.2.3
+numpy==2.1.1
+ccxt==4.4.0
+pycoingecko==3.2.0
 
 # ==============================================
 # API & HTTP İstemcileri
 # ==============================================
-httpx>=0.27.2
-aiohttp>=3.10.0
-websockets>=13.0
-duckduckgo_search>=5.0.0          # 🔴 EKLENDİ: DDG arama entegrasyonu
+httpx==0.27.2
+aiohttp==3.10.10
+websockets==13.1
+duckduckgo-search==6.3.2
 
 # ==============================================
 # Dosya & Form İşleme
 # ==============================================
-python-multipart>=0.0.22          # ✅ DÜZELTİLDİ: 0.0.22 (0.12 değil)
-jinja2>=3.1.4
+python-multipart==0.0.12
+jinja2==3.1.4
 
 # ==============================================
 # Yardımcı & Güvenlik
 # ==============================================
-python-dotenv>=1.0.1
-pydantic>=2.9.0
-pydantic-settings>=2.5.0
+python-dotenv==1.0.1
+pydantic==2.9.2
+pydantic-settings==2.5.2
 
 # ==============================================
 # Loglama & Debug
 # ==============================================
-loguru>=0.7.2
-rich>=13.7.0
+loguru==0.7.2
+rich==13.8.1
 
 # ==============================================
 # Test & Development
 # ==============================================
-pytest>=8.3.0
-pytest-asyncio>=0.24.0
-pytest-cov>=5.0.0
-ruff>=0.6.0
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==5.0.0
+ruff==0.7.1
 
 # ==============================================
 # Web Framework & CORS
 # ==============================================
-flask>=3.0.0
-flask-cors>=5.0.0
-flask-limiter>=3.8.0
+flask==3.0.3
+flask-cors==5.0.0
+flask-limiter==3.8.0
 
 # ==============================================
 # Machine Learning & AI
 # ==============================================
-torch>=2.4.0
-transformers>=5.0.0
+torch==2.4.1
+transformers==4.45.2
 
 # ==============================================
 # Image Processing
 # ==============================================
-Pillow>=10.0.0
+Pillow==10.4.0
