--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,11 @@
-# Core FastAPI & server
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-python-multipart==0.0.9
-
-# Image & OCR
-pillow==10.4.0
-easyocr==1.7.2  # En son stabil, tr+en desteği iyi
-
-# Data & Finance
-pandas==2.2.3
-yfinance==0.2.44
-openpyxl==3.1.5
-
-# Rate limiting
-slowapi==0.1.9
-
-# Torch CPU-only (easyocr bağımlılığı – Railway düşük RAM'de patlamasın)
+fastapi>=0.115.0
+uvicorn>=0.30.0
+slowapi>=0.1.9
+pydantic>=2.0
+pillow>=10.0
+pandas>=2.0
+yfinance>=0.2.40
+easyocr>=1.7.1
+torch==2.4.1+cpu
+torchvision==0.19.1+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.5.1+cpu
-torchvision==0.20.1+cpu
