--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.3
-yfinance==0.2.28
+uvicorn[standard]==0.27.0
+pydantic==2.6.1
+yfinance==0.2.36
+httpx==0.27.0
+python-multipart==0.0.9
