--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ pydantic==2.6.1
 yfinance==0.2.36
 httpx==0.27.0
 python-multipart==0.0.9
+ 
+python-dotenv
+pandas
+pandas_ta
+xgboost
+scikit-learn
