--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-fastapi==0.104.1
-uvicorn[standard]==0.27.0
-pydantic==2.6.1
-yfinance==0.2.36
-httpx==0.27.0
-python-multipart==0.0.9
- 
-python-dotenv
-pandas
-pandas_ta
-xgboost
-scikit-learn
+fastapi==0.109.0
+uvicorn==0.27.0
+yfinance==0.2.37
+pandas==2.2.0
+pandas-ta==0.3.14b0
+xgboost==2.0.3
+scikit-learn==1.4.0
+httpx==0.26.0
+python-dotenv==1.0.0
+python-slugify==8.0.4
+redis==5.0.1
+cachetools==5.3.2
+slowapi==0.1.9
+pydantic==2.6.0
+pydantic-settings==2.1.0
