--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,15 @@
-# Core FastAPI & Server
 fastapi==0.115.0
 uvicorn==0.30.6
-gunicorn==22.0.0              # production'da uvicorn yerine gunicorn + workers önerilir
-
-# Data & Finance
 yfinance==0.2.43
 pandas==2.2.3
-pandas-ta-classic==0.3.59     # pandas-ta yerine stabil fork
-
-# HTTP & Async
+pandas-ta-classic==0.3.59
 httpx==0.27.2
-
-# Environment & Config
 python-dotenv==1.0.1
-
-# Rate Limiting & Validation
 slowapi==0.1.9
 pydantic==2.9.2
-
-# Utilities
-python-slugify==8.0.4         # slugify yerine doğru paket
-
-# Opsiyonel (eğer kullanıyorsan bırak, yoksa sil)
-cachetools==5.3.2             # cache için
-redis==5.0.1                  # eğer redis cache entegre edeceksen
+python-slugify==8.0.4
+xgboost==2.1.1
+scikit-learn==1.5.2
+joblib==1.4.2
+tensorflow==2.17.0          # LSTM için
+numpy==1.26.4
