--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-yfinance==0.2.43
-pandas==2.2.3
-pandas-ta-classic==0.3.59
-httpx==0.27.2
-python-dotenv==1.0.1
-slowapi==0.1.9
-pydantic==2.9.2
+fastapi==0.109.0
+uvicorn==0.27.0
+yfinance==0.2.37
+pandas==2.2.0
+pandas-ta==0.3.14b0
+xgboost==2.0.3
+scikit-learn==1.4.0
+httpx==0.26.0
+python-dotenv==1.0.0
 python-slugify==8.0.4
-xgboost==2.1.1
-scikit-learn==1.5.2
-joblib==1.4.2
-tensorflow==2.17.0          # LSTM için
-numpy==1.26.4
+slowapi==0.1.9
+pydantic==2.6.0
+pydantic-settings==2.1.0
