--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # 1. Dosyaları oluştur
-echo "fastapi==0.109.0
+fastapi==0.109.0
 uvicorn==0.27.0
 yfinance==0.2.37
 pandas==2.2.0
@@ -11,6 +11,6 @@ python-dotenv==1.0.0
 python-slugify==8.0.4
 slowapi==0.1.9
 pydantic==2.6.0
-pydantic-settings==2.1.0" > requirements.txt
+pydantic-settings==2.1.0 
 
  
