--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.109.0
 uvicorn==0.27.0
 yfinance==0.2.37
 pandas==2.2.0
-pandas-ta==0.4.71b0
+numpy==1.26.4
 xgboost==2.0.3
 scikit-learn==1.4.0
 httpx==0.26.0
