--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# requirements.txt
+cat > requirements.txt << 'EOF'
 fastapi==0.109.0
 uvicorn==0.27.0
 yfinance==0.2.37
@@ -7,3 +9,14 @@ httpx==0.26.0
 python-dotenv==1.0.0
 slowapi==0.1.9
 pydantic==2.6.0
+websockets==12.0
+EOF
+
+# main.py oluştur (yukarıdaki kod)
+
+# Environment variables (Railway UI)
+# OPENROUTER_API_KEY = sk-or-v1-xxx (isteğe bağlı - AI için)
+# RATE_LIMIT_PER_MINUTE = 10
+
+# Deploy
+railway up
