--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-dotenv==1.0.0
 slowapi==0.1.9
 pydantic==2.6.0
 websockets==12.0
- 
-
- 
+aiohttp==3.9.1
+scipy==1.11.4
+python-multipart==0.0.6
+jinja2==3.1.3
