--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-# requirements.txt
- 
-fastapi==0.109.0
-uvicorn==0.27.0
-yfinance==0.2.37
-pandas==2.2.0
-numpy==1.26.4
-httpx==0.26.0
-python-dotenv==1.0.0
-slowapi==0.1.9
-pydantic==2.6.0
-websockets==12.0
-aiohttp==3.9.1
-scipy==1.11.4
-python-multipart==0.0.6
-jinja2==3.1.3
+fastapi==0.109.0        # API core
+uvicorn==0.27.0         # ASGI server
+pandas==2.2.0           # data handling
+numpy==1.26.4           # math
+httpx==0.26.0           # async HTTP (Binance, CoinGecko)
+python-dotenv==1.0.0    # env config
+slowapi==0.1.9          # rate limit
+pydantic==2.6.0         # schema
+websockets==12.0        # realtime
+aiohttp==3.9.1          # async requests
+scipy==1.11.4           # indicators
+python-multipart==0.0.6 # form upload
+jinja2==3.1.3           # TradingView template
