--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ aiohttp==3.9.1          # async requests
 scipy==1.11.4           # indicators
 python-multipart==0.0.6 # form upload
 jinja2==3.1.3           # TradingView template
+redis>=4.5.0
