--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ scipy==1.11.4           # indicators
 python-multipart==0.0.6 # form upload
 jinja2==3.1.3           # TradingView template
 redis>=4.5.0
+scikit-learn>=1.3.0
