--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,9 @@ opencv-python>=4.10.0
 pillow>=10.4.0
 matplotlib>=3.9.0
 plotly>=5.24.0
-  
+  torch==2.4.0+cpu
+torchvision==0.19.0+cpu
+--index-url https://download.pytorch.org/whl/cpu
 
 # Utils & Performance
 rich>=13.8.0
