--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,23 @@
-# Core & Web
 fastapi>=0.115.0
-uvicorn>=0.30.0
-aiohttp>=3.10.0
-websockets>=13.0
+uvicorn[standard]>=0.30.0
 orjson>=3.10.0
 
-# Data & ML
-pandas>=2.2.3
 numpy>=2.0.0
+pandas>=2.2.3
 scikit-learn>=1.5.2
-torch>=2.4.0
-torchvision>=0.19.0
+
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.4.1+cpu
+torchvision==0.19.1+cpu
 transformers>=4.45.0
 
-# Technical Analysis
-ta-lib>=0.4.28          # pip install TA-Lib   (önce sistem bağımlılığı gerekir)
 pandas-ta>=0.3.14b0
 
-# Image / Chart Processing
 opencv-python>=4.10.0
 pillow>=10.4.0
-matplotlib>=3.9.0
 plotly>=5.24.0
-  torch==2.4.0+cpu
-torchvision==0.19.0+cpu
---index-url https://download.pytorch.org/whl/cpu
 
-# Utils & Performance
+pydantic>=2.9.0
 rich>=13.8.0
 loguru>=0.7.2
-aiocache>=0.12.1
-pydantic>=2.9.0
 psutil>=6.0.0
-lightgbm>=4.0.0
-
-# Opsiyonel ama faydalı
-redis>=5.0.1
-xgboost>=2.1.0
-scipy>=1.14.0
-jinja2>=3.1.4
-python-multipart==0.0.12
-fastapi-limiter==0.1.6
-aioredis==2.0.1          # genelde birlikte kullanılır
