--- a/requirements.txt
+++ b/requirements.txt
@@ -37,4 +37,6 @@ jinja2 >= 3.1.4
 fastapi-limiter == 0.1.6
 redis >= 5.0.1
 pycoingecko
-aioredis>=2.0.0     # ← Bunu ekle!
+# Mevcut satırların sonuna ekle
+aioredis>=2.0.0
+setuptools>=70.0.0          # ← distutils'ı sağlayan paket (en yeni sürüm)
