--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,5 @@ pydantic >= 2.9.0
 loguru >= 0.7.2
 psutil >= 6.0.0
 python-multipart == 0.0.12
+sentry-sdk>=2.0.0    # veya en güncel sürüm, mesela ==2.20.0 gibi
 
